More ArchivedEvent refactoring